# To_Do_Client

./: Blog_Client.code-workspace  README.md  capacitor.config.json  index.html  main.cjs  package-lock.json  package.json  sign-app.bat  sign-log.txt  todo.js  vite.config.js
android/: gradle.properties
android/app/: build.gradle
android/app/src/main/res/values/: strings.xml
build-manager/: cert.pfx  package.json  sign-app.bat  sign-log.txt
build-manager/src/: index.html  main.js  style.css  utils.js
build-manager/src-tauri/: Cargo.toml  sign-app.bat  tauri.conf.json  tauri.x86.conf.json  x86-restriction.wxs
build-manager/src-tauri/src/: lib.rs
dist-electron/: builder-debug.yml  builder-effective-config.yaml  latest-linux.yml
public/: connectivity.js  convert_images.ps1  manifest.json  offline.html  sw.js  verify_png.mjs
src/: App.css  ForgotPassword.jsx  Home.jsx  Login.jsx  Register.jsx  To-Do_Item.jsx  VerifyOtp.jsx  api.js  app.jsx  auth.css  home.css  main.jsx  notfound.jsx  resendOtp.jsx  to-do-item.css  to-do.css  to-do.jsx
src-tauri/: Cargo.toml  README.txt  tauri.conf.json  x86-restriction.wxs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: config.default.json
src-tauri/src/: lib.rs
src/components/: Navbar.jsx  OtpInput.jsx  TitleBar.jsx  TopNavbar.jsx  navbar.css  titlebar.css  top-navbar.css
src/components/Dialog/: Dialog.css  Dialog.jsx  DialogContext.jsx
src/hooks/: useBackButton.js  useHaptics.js  useSounds.js
test_icons/: icon.icns
(+1 files in other folders)
